--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "axios": "^1.1.3",
         "currency-system": "^2.7.1",
         "discord-api-types": "^0.36.1",
-        "discord.js": "^13.10.3",
+        "discord.js": "^14.21.0",
         "dotenv": "^8.2.0",
         "form-data": "^4.0.0",
         "mongoose": "^6.4.4",
@@ -30,6 +30,19 @@
         "@typescript-eslint/eslint-plugin": "^5.44.0",
         "@typescript-eslint/parser": "^5.44.0",
         "eslint": "^8.28.0",
-        "typescript": "^4.9.3"
-    }
+        "ts-node": "^10.9.2",
+        "typescript": "^4.9.5"
+    },
+    "main": "jsFileCleaner.js",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/vanderrich/potato-bot.git"
+    },
+    "keywords": [],
+    "license": "ISC",
+    "type": "commonjs",
+    "bugs": {
+        "url": "https://github.com/vanderrich/potato-bot/issues"
+    },
+    "homepage": "https://github.com/vanderrich/potato-bot#readme"
 }
