--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,8 @@
         "forceConsistentCasingInFileNames": true,
         "strict": true,
         "skipLibCheck": true,
-        "noImplicitAny": true
+        "noImplicitAny": true,
+        "resolveJsonModule": true, // recent addition
+        "esModuleInterop": true // recent addition
     }
 }
