--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "url": "git+https://github.com/LuanBertozzi7/potato.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "LuanBertozzi7",
   "license": "ISC",
   "type": "commonjs",
   "bugs": {
