--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-POTATO_TOKEN=MTM5MjIxMzgxNzYwMTE2NzUwMA.G1Ida6.FHTboZsC9gSTKJ_ha0pEX82fn1tgn6vfbXRCQU
+POTATO_TOKEN=MTM5MjIxMzgxNzYwMTE2NzUwMA.GkbXs8.zc-wACtJAtePHSpaLgPFXU2RJxPDubGrrHqhQA
