--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "colors": "^1.4.0",
     "discord.js": "^14.21.0",
     "dotenv": "^17.1.0",
+    "fs": "^0.0.1-security",
     "ts-lib": "^0.0.5"
   }
 }
